--- a/index.html
+++ b/index.html
@@ -187,7 +187,16 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <div>
+            <a href="">FINSWEET</a>
+            <ul>
+                <li>CONTACT</li>
+                <li>ABOUT</li>
+                <li>SERVICE</li>
+            </ul>
+        </div>
+    </footer>
 
 </body>
 
