--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -13,11 +13,13 @@
                 <img src="../images/Logo.svg" alt="">
             </a>
             <ul class="flex items-center gap-[32px]">
-                <li>About Us</li>
-                <li>Careers</li>
-                <li>Services</li>
-                <li>Blog</li>
-                <li>Contact Us</li>
+                <li><a href="../pages/aboutUs.html">About Us</a></li> 
+                
+                <li> <a href="../pages/careers.html"></a>Careers</li>
+                
+                <li>Services <a href="../pages/services.html"></a></li>
+                <li>Blog <a href="../pages/blog.html"></a></li>
+                <li>Contact Us <a href="../pages/contactUs.html"></a></li>
                 <li>
                     <button class="px-[32px] py-[18px] bg-[#F58A071A] rounded-[31px] text-[#F58A07] font-[700]">
                         Clone project
