--- a/pages/services.html
+++ b/pages/services.html
@@ -26,6 +26,23 @@
         </nav>
     </header>
 
+    <main>
+        <section>
+            <div class="container mx-auto">
+                <div>
+                    <h1>We serve clients with ground breaking solutions</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo odio, sagittis quis ornare quis.</p>
+                    <span>
+                        <button>Work With Us</button>
+                    </span>
+                </div>
+                <div>
+                    <img src="../images/Header Image.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
+
 
     <footer class="bg-[#0D1317] text-white pt-16 pb-8">
         <div class="container mx-auto px-4">
