--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
     <header class="py-[16px]">
         <nav class="container mx-auto flex justify-between items-center px-4">
-            <a href="">
+            <a href="./index.html">
                 <img src="./images/Logo.svg" alt="">
             </a>
             <ul class="flex items-center gap-[32px]">
                 <li><a href="./pages/aboutUs.html">About Us</a></li> 
                 
-                <li> <a href="./pages/careers.html"></a>Careers</li>
+                <li> <a href="./pages/careers.html">Careers</a></li>
                 
-                <li>Services <a href="./pages/services.html"></a></li>
-                <li>Blog <a href="./pages/blog.html"></a></li>
-                <li>Contact Us <a href="./pages/contactUs.html"></a></li>
+                <li><a href="./pages/services.html">Services</a></li>
+                <li><a href="./pages/blog.html">Blog</a></li>
+                <li><a href="./pages/contactUs.html">Contact Us</a></li>
                 <li>
                     <button class="px-[32px] py-[18px] bg-[#F58A071A] rounded-[31px] text-[#F58A07] font-[700]">
                         Clone project
