--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-50">
     <header class="py-[16px]">
         <nav class="container mx-auto flex justify-between items-center px-4">
-            <a href="">
+            <a href="../index.html">
                 <img src="../images/Logo.svg" alt="">
             </a>
             <ul class="flex items-center gap-[32px]">
