--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -8,7 +8,7 @@
 <body>
     <header class="py-[16px]">
         <nav class="container mx-auto flex justify-between items-center px-4">
-            <a href="">
+            <a href="../index.html">
                 <img src="../images/Logo.svg" alt="">
             </a>
             <ul class="flex items-center gap-[32px]">
