--- a/pages/services.html
+++ b/pages/services.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
     <header class="py-[16px]">
@@ -30,16 +31,114 @@
 
     <main>
         <section>
-            <div class="container mx-auto">
-                <div>
-                    <h1>We serve clients with ground breaking solutions</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo odio, sagittis quis ornare quis.</p>
+            <div class="container mx-auto flex items-center justify-between gap-[20px] py-[100px]">
+                <div class="w-[610px] flex flex-col gap-[24px]">
+                    <h1 class="text-[64px] text-[#1D3444] font-[600]">We serve clients with ground breaking solutions</h1>
+                    <p class="text-[18px] text-[#5B5B5B]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo odio, sagittis quis ornare quis.</p>
                     <span>
-                        <button>Work With Us</button>
+                        <button class="px-[32px] py-[18px] bg-[#F58A07] text-[white] rounded-[32px] font-[600]">Work With Us</button>
                     </span>
                 </div>
                 <div>
                     <img src="../images/Header Image.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container flex justify-between items-center gap-[30px] mx-auto pb-[100px]">
+                <div>
+                    <img src="../images/Feature 1 Image.png" alt="">
+                </div>
+                <div class="w-[570px] flex flex-col gap-[24px]">
+                    <h1 class="text-[48px] text-[black] font-[600]">Business strategy</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo odio, sagittis quis ornare quis.met, consectetur
+                    adipiscing elit. Aliquam leo odio, sagittis quis ornare quis.</p>
+                    <ul class="list-disc flex flex-col gap-[8px] pl-[20px]">
+                        <li>Cost strategy</li>
+                        <li>Differentiated product or service strategy</li>
+                        <li>Focus on a niche strategy</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container mx-auto flex items-center justify-between gap-[50px] pb-[100px]">
+                 <div class="w-[580px] flex flex-col gap-[24px]">
+                    <h1 class="text-[48px] font-[600]">Digitalization</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo odio, sagittis quis ornare quis.met, consectetur
+                    adipiscing elit. Aliquam leo odio, sagittis quis ornare quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Aliquam leo odio, sagittis.</p>
+                 </div>
+                 <div>
+                    <img src="../images/Feature 2 image.png" alt="">
+                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="container flex justify-between items-center gap-[30px] mx-auto pb-[100px]">
+                <div>
+                    <img src="../images/Feature 3 Image.png" alt="">
+                </div>
+                <div class="w-[570px] flex flex-col gap-[24px]">
+                    <h1 class="text-[48px] text-[black] font-[600]">Risk assessment</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo odio, sagittis quis ornare quis.met, consectetur
+                    adipiscing elit. Aliquam leo odio, sagittis quis ornare quis.</p>
+                    <ul class="list-disc flex flex-col gap-[8px] pl-[20px]">
+                        <li>Individual risk assessment</li>
+                        <li>Systems risk assessment</li>
+                        <li>Mathematical conceptualization</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container mx-auto flex items-center justify-between gap-[50px] pb-[100px]">
+                <div class="w-[580px] flex flex-col gap-[24px]">
+                    <h1 class="text-[48px] font-[600]">Artificial intelligence</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo odio, sagittis quis ornare quis.met, consectetur
+                    adipiscing elit. Aliquam leo odio, sagittis quis ornare quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Aliquam leo odio, sagittis.</p>
+                </div>
+                <div>
+                    <img src="../images/Featue 4 Image.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container flex justify-between items-center gap-[30px] mx-auto pb-[100px]">
+                <div>
+                    <img src="../images/Feature 5 Image.png" alt="">
+                </div>
+                <div class="w-[570px] flex flex-col gap-[24px]">
+                    <h1 class="text-[48px] text-[black] font-[600]">Smart Contracts</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam leo odio, sagittis quis ornare quis.met, consectetur
+                    adipiscing elit. Aliquam leo odio, sagittis quis ornare quis.</p>
+                    <ul class="list-disc flex flex-col gap-[8px] pl-[20px]">
+                        <li>Smart contract implementation</li>
+                        <li>Smart legal contracts</li>
+                        <li>Basic contract law</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container mx-auto flex items-center justify-between gap-[50px] pb-[100px]">
+                <div class="w-[580px] flex flex-col gap-[24px]">
+                    <h1 class="text-[48px] font-[600]">Finsweet was a dream to work with</h1>
+                    <p>Maecenas efficitur scelerisque lorem, et varius lacus tincidunt vel. Pellentesque a arcu vitae diam dapibus mattis vel
+                    vel orci. Vivamus eleifend nec felis vel auctor.</p>
+                    <div class="flex items-center gap-[20px]">
+                        <span>
+                            <img src="../images/Image (4).png" alt="">
+                        </span>
+                        <span>
+                            <h4 class="text-[24px] text-[#063255]">Chikelu Neo</h4>
+                            <p class="text-[#F58A07]">CEO at MazeAI</p>
+                        </span>
+                    </div>
+                </div>
+                <div>
+                    <img src="../images/Image (3).png" alt="">
                 </div>
             </div>
         </section>
