--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </header>
 
     <main>
-        <section class="bg-[#DCEAF5]">
-            <div class="container mx-auto flex items-center px-4 py-12 md:py-20">
+        <section class="bg-[#DCEAF5] px-[20px]">
+            <div class="container mx-auto flex flex-col md:flex-row items-center px-4 py-12 md:py-20">
                 <div class="w-full md:w-[650px] flex flex-col gap-6 md:gap-[27px]">
                     <h1 class="text-4xl md:text-5xl lg:text-[64px] leading-tight md:leading-[72px] font-[600]">Prosper with our bespoke solutions</h1>
                     <p class="text-gray-600">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique</p>
@@ -49,7 +49,7 @@
                         <img src="./images/Logo (4).svg" alt="">
                     </div>
                 </div>
-                <div class="hidden lg:block">
+                <div class="">
                     <img src="./images/Image.png" alt="">
                 </div>
             </div>
@@ -62,7 +62,7 @@
                     <p class="text-gray-600 text-lg max-w-2xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cumulate nisi nostrud eros ismortis, hendrerit elit elit, diverilis penus. Vivamus commodo suscipit tellus at pulviniorisque.</p>
                 </div>
                 
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="grid grid-cols-1 md:grid-cols-2  lg:grid-cols-3 gap-8">
                     <div class="bg-white rounded-3xl p-6 md:p-8 shadow-sm hover:shadow-md transition-shadow duration-300">
                         <div class="mb-6">
                             <img src="./images/b8f69e8a31e298cac76a659b0991abae28fbdbee.png" alt="Business strategy" class="w-full h-56 object-cover rounded-2xl">
